Fix some layout issue and added css components

--- a/less/components.less
+++ b/less/components.less
@@ -157,7 +157,7 @@ html {
   .label {
     border-radius: 2px;
     font-size: 70%;
-    font-weight: regular;
+    font-weight: normal;
 
     &-flashy {
       background-color: @medium-blueberry;
@@ -236,7 +236,7 @@ html {
     }
 
     &-warning {
-      border-color:  @medium-apricot;
+      border-color: @medium-apricot;
       & > .panel-heading {
         background-color: @medium-apricot;
         color: @white;
@@ -245,7 +245,7 @@ html {
     }
 
     &-danger {
-      border-color:  @medium-strawberry;
+      border-color: @medium-strawberry;
       & > .panel-heading {
         background-color: @medium-strawberry;
         color: @white;
@@ -274,5 +274,135 @@ html {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
   }
+
+  // Infobox
+  // --------------------------------------------------
+
+  // Base styles (regardless of theme)
+  .callout {
+    color: @white !important;
+    font-size: 18px;
+    font-weight: 400;
+    .border-radius(3px);
+    margin: 0 0 20px 0;
+    padding: 15px 30px 15px 15px;
+    border-left: 5px solid #eee;
+    a {
+      color: #fff;
+      font-size: 18px;
+      text-decoration: underline;
+      &:hover {
+        color: #eee;
+      }
+    }
+    h1, h2, h3, h4, h5 {
+      margin-top: 0;
+      font-weight: 600;
+      color: @white !important;
+    }
+    p:last-child {
+      margin-bottom: 0;
+    }
+    code,
+    .highlight {
+      background-color: #fff;
+    }
+
+    // Themes for different contexts
+    &.callout-danger {
+      &:extend(.bg-red);
+      border-color: darken(@red, 10%);
+    }
+    &.callout-warning {
+      &:extend(.bg-yellow);
+      border-color: darken(@yellow, 10%);
+    }
+    &.callout-info {
+      &:extend(.bg-blue);
+      border-color: darken(@blue, 10%);
+    }
+    &.callout-success {
+      &:extend(.bg-green);
+      border-color: darken(@green, 10%);
+    }
+  }
+
+
+  // Infobox
+  // --------------------------------------------------
+  .border-radius(@radius) {
+    border-radius: @radius;
+  }
+  .border-radius(@topleft; @topright; @bottomright; @bottomleft) {
+    border-top-left-radius: @topleft;
+    border-top-right-radius: @topright;
+    border-bottom-right-radius: @bottomright;
+    border-bottom-left-radius: @bottomleft;
+  }
+  .info-box {
+    display: block;
+    min-height: 90px;
+    background: #fff;
+    width: 100%;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);;
+    margin-bottom: 15px;
+    small {
+      font-size: 14px;
+    }
+    .progress {
+      background: rgba(0, 0, 0, .2);
+      margin: 5px -10px 5px -10px;
+      height: 2px;
+      &,
+      & .progress-bar {
+        .border-radius(0);
+      }
+      .progress-bar {
+        background: #fff;
+      }
+    }
+  }
+  .info-box-icon {
+    .border-radius(2px; 0; 2px; 0);
+    display: block;
+    float: left;
+    height: 90px;
+    width: 90px;
+    text-align: center;
+    font-size: 45px;
+    line-height: 90px;
+    background: rgba(0, 0, 0, 0.2);
+    > img {
+      max-width: 100%;
+    }
+  }
+  .info-box-content {
+    padding: 5px 10px;
+    margin-left: 90px;
+  }
+  .info-box-number {
+    display: block;
+    font-weight: bold;
+    font-size: 18px;
+  }
+  .progress-description,
+  .info-box-text {
+    display: block;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .info-box-text {
+    text-transform: uppercase;
+  }
+  .info-box-more {
+    display: block;
+  }
+
+  .progress-description {
+    margin: 0;
+  }
+
 }
 
