--- a/less/typography.less
+++ b/less/typography.less
@@ -86,7 +86,7 @@
 }
 
 .w20bt-text--menu-route {
-  font-size: 14px;
+  font-size: 15px;
 }
 
 
